Corrected library input focus and blur, category bug while being in different pages and Nav spacing

--- a/src/assets/css/library.css
+++ b/src/assets/css/library.css
@@ -78,11 +78,12 @@
 }
 
 #divSearchInputLibrary {
-    height: 30px;
+    height: 40px;
     width: 450px;
     margin-bottom: 20px;
     position: relative;
     display: flex;
+    padding: 5px;
 }
 
 #divSearchInputLibrary input {
@@ -100,6 +101,7 @@
     display: flex;
     width: auto;
     position: absolute;
+    padding-bottom: 16px;
 }
 
 #divSearchInputLibrary #iconXLibrary {
@@ -115,6 +117,7 @@
     height: 100%;
     padding: 4px;
     transition: fill 0.1s ease-in-out;
+    padding-bottom: 13px;
 }
 
 #divSearchInputLibrary #iconXLibrary:hover {
